--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     margin: auto;
     height: 250px;
-    /*overflow: scroll;*/ /* optional,try to make scroll not visible*/
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: auto; /* Add vertical scrollbar */ /* optional,try to make scroll not visible*/
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
